feat: Integrate Firebase for real-time backend
Replaces mock data and local storage with Firebase Firestore and Authentication.
This enables real-time updates, persistent storage, and user authentication.
The README has been updated to reflect these changes and provide setup instructions.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     "@heroicons/react/": "https://aistudiocdn.com/@heroicons/react@^2.2.0/",
     "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3",
-    "vite": "https://aistudiocdn.com/vite@^7.1.6"
+    "vite": "https://aistudiocdn.com/vite@^7.1.6",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/"
   }
 }
 </script>
